@@ -1,3 +1,8 @@
+Fri Jan 17 17:58:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_mod_s_constants): return its own constants for other
+	  than Module itself.  [ruby-core:59763] [Bug #9413]
+
 Tue Jan 16 00:17:00 2014  Kenta Murata  <mrkn@mrkn.jp>
 
 	* ext/bigdecimal/bigdecimal.gemspec: bigdecimal version 1.2.5.
